# Simulation_analyse_MATKIT

./: .gitignore  README.md  pyproject.toml  分析软件需求文档.md
configs/: default_cutoffs.json
examples/so4_cu2o/: POSCAR
matkit/: __init__.py  __main__.py
matkit-manual/: matkit-manual.html
matkit/ai/: __init__.py  assistant.py  prompts.py
matkit/analysis/: __init__.py  adsorption.py  recommendations.py
matkit/charge/: __init__.py  bader_analysis.py  charge_density.py
matkit/cli/: __init__.py  main.py
matkit/energy/: __init__.py  adsorption_energy.py  doping_energy.py  surface_energy.py
matkit/parsers/: __init__.py  bader_parser.py  chgcar.py  oszicar.py  outcar.py  poscar.py
matkit/structure/: __init__.py  geometry.py  molecule.py  surface.py
matkit/ui/: __init__.py  server.py
matkit/ui/static/: app.css  app.js  index.html
tests/: test_adsorption_analysis.py  test_energy.py  test_ui_server.py
