[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matkit-analyse-software"
version = "0.2.0"
description = "VASP-oriented simulation analysis toolkit for adsorption, surface, energy, charge, and AI-assisted workflows."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "MatKit Team" }]
dependencies = [
  "numpy>=1.22",
]

[project.optional-dependencies]
ai = ["requests>=2.28"]
plot = ["matplotlib>=3.6"]
test = []
dev = ["requests>=2.28", "matplotlib>=3.6"]

[project.scripts]
matkit = "matkit.cli.main:main"

[tool.setuptools.packages.find]
include = ["matkit*"]
